--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <a href="#" class="brand">Developer</a>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
+            <li><a href="./public/hobies.html">Hobies</a></li>
+            <li><a href="./public/contact.html"></a>contact</li>
         </ul>
     </nav>
 </header>
