--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a href="./public/hobies.html">Hobies</a></li>
-            <li><a href="./public/contact.html"></a>contact</li>
+            <li><a href="./public/contact.html">contact</a></li>
         </ul>
     </nav>
 </header>
